force-app/main/default/objects/OrderItem/fields/CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CostPrice__c</fullName>
    <description>Cost Price</description>
    <label>CostPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>