force-app/main/default/objects/OrderItem/fields/OrderItemLineNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderItemLineNumber__c</fullName>
    <description>OrderItem Line Number</description>
    <label>Line Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>