force-app/main/default/objects/OrderItem/fields/TotalCostPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalCostPrice__c</fullName>
    <description>Total Cost Price</description>
    <formula>AvailableQuantity  *  CostPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalCostPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>